# qsp-core

./: AGENTS.md  AI_ENGINEERING_GUIDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: api-overview.md  architecture.md  downstream-usage.md  repo-roadmap.md
examples/: __init__.py  filter_demo.py  quaternion_basics.py  su2_demo.py  transform_demo.py
qsp/: __init__.py  filters.py  quaternion.py  su2.py  transforms.py  utils.py
tests/: test_filters.py  test_package_api.py  test_quaternion.py  test_su2.py  test_transforms.py  test_utils.py
