[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qsp-core"
version = "0.1.0"
description = "Quaternionic Signal Processing core foundation library for RQM Technologies"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name = "RQM Technologies" }
]
keywords = ["quaternion", "signal processing", "SU(2)", "mathematics", "transforms", "QSP"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
Homepage = "https://github.com/RQM-Technologies-dev/qsp-core"
Repository = "https://github.com/RQM-Technologies-dev/qsp-core"
Issues = "https://github.com/RQM-Technologies-dev/qsp-core/issues"

[tool.setuptools.packages.find]
include = ["qsp*"]
